# lr

./: CMakeLists.txt  Grammar.cpp  Grammar.h  Lr1.cpp  Lr1.h  Parser.cpp  Parser.h  README.md  Reader.cpp  Reader.h  Utility.cpp  Utility.h  Writer.cpp  Writer.h  cmake.sh  main.cpp
tests/: CMakeLists.txt  lrtests.cpp
tests/data/answers/: ans3.txt  ans5.txt  ans6.txt  ans7.txt
tests/data/input/: test1.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt  test7.txt
tests/data/output/: out6.txt  out7.txt
